--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
 			</plugin>
 		</plugins>
 	</build>
+	
+    <properties>
+        <!--  <junit.version>4.11</junit.version> -->
+        <spring.version>3.2.4.RELEASE</spring.version>
+        <!--  <jackson.version>2.3.2</jackson.version> -->
+    </properties>	
 
 	<dependencies>
 		<dependency>
@@ -38,13 +44,25 @@
 		<dependency>
 			<artifactId>spring-webmvc</artifactId>
 			<groupId>org.springframework</groupId>
-			<version>3.2.4.RELEASE</version>
+			<version>${spring.version}</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<artifactId>spring-web</artifactId>
+			<groupId>org.springframework</groupId>
+			<version>${spring.version}</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<artifactId>spring-orm</artifactId>
 			<groupId>org.springframework</groupId>
-			<version>3.2.4.RELEASE</version>
+			<version>${spring.version}</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<artifactId>jstl</artifactId>
+			<groupId>javax.servlet</groupId>
+			<version>1.2</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
@@ -71,23 +89,26 @@
 			<version>1.9.5</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<artifactId>jstl</artifactId>
-			<groupId>javax.servlet</groupId>
-			<version>1.2</version>
-			<scope>compile</scope>
-		</dependency>
+
+		<!--  
 		<dependency>
 			<artifactId>liquibase-core</artifactId>
 			<groupId>org.liquibase</groupId>
 			<version>3.0.5</version>
 			<scope>compile</scope>
 		</dependency>
+		-->
 		<dependency>
 			<artifactId>tomcat-servlet-api</artifactId>
 			<groupId>org.apache.tomcat</groupId>
 			<version>7.0.42</version>
 			<scope>provided</scope>
+		</dependency>
+		
+		<dependency>
+		 	<groupId>org.codehaus.jackson</groupId>
+		 	<artifactId>jackson-mapper-asl</artifactId>
+		 	<version>1.9.12</version>
 		</dependency>
 		
 		<!--  Logger 4 J -->
