--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-                      http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" 
+    	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
+                      		http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.xpanxion</groupId>
@@ -29,12 +31,13 @@
 	</build>
 	
     <properties>
-        <!--  <junit.version>4.11</junit.version> -->
         <spring.version>3.2.4.RELEASE</spring.version>
+        <!--  <junit.version>4.11</junit.version> -->
         <!--  <jackson.version>2.3.2</jackson.version> -->
     </properties>	
 
 	<dependencies>
+	
 		<dependency>
 			<artifactId>junit</artifactId>
 			<groupId>junit</groupId>
