--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,12 @@
 			<version>1.9.5</version>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+         <groupId>org.apache.httpcomponents</groupId>
+         <artifactId>httpclient</artifactId>
+         <version>4.3.6</version>
+        </dependency>
 
 		<!--  
 		<dependency>
